7143
I don't know what this is trying to report - please be considerably more specific, I can't read your mind.  The output looks like exactly what I'd expect.
{noformat}
./a.scala:5: error: not found: type Bar
extends Bar
        ^
one error found
{noformat}
